--- a/src/frontend/pages/FeedPage/feed.module.css
+++ b/src/frontend/pages/FeedPage/feed.module.css
@@ -58,3 +58,45 @@
 .bold {
     font-weight: bold;
 }
+
+
+
+/* siloDescription.module.css */
+.description {
+    padding: 20px;
+    margin-bottom: 20px;
+    margin-top: 0px;
+    border-radius: 10px;
+    font-size: 20px; /* Increase the font size */
+    margin-left: 40px;
+    margin-right: 40px;
+    background: linear-gradient(45deg, #73beff, #f2f2f2);
+    backdrop-filter: blur(10px);
+    text-align: left; /* Left justify the text */
+    position: relative;
+    z-index: 1; /* Ensure this is above the canvas */
+}
+  
+.testTitle {
+    display: flex;
+    justify-content: flex-start; /* Left justify the header */
+    align-items: center;
+    background-color: None;
+    width: 90%;
+    color: #ffffffff; 
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    position: relative;
+    z-index: 1; /* Ensure this is above the canvas */
+}
+  
+.aboutHeader {
+    font-size: 100px; /* Huge font size for the header */
+    margin-left: 10px; /* Align with description margin */
+    letter-spacing: 75px;
+    position: relative;
+    z-index: 1; /* Ensure this is above the canvas */
+}
