--- a/src/frontend/pages/OLDStudentProfileEditorPage/studentProfileEditor.module.css
+++ b/src/frontend/pages/OLDStudentProfileEditorPage/studentProfileEditor.module.css
@@ -12,7 +12,8 @@
   }
   
   .profileEditorContainer {
-    margin: 20px auto;
+    margin-left: 20px;
+    margin-right: 20px;
     padding: 20px;
     min-width: 40%;
     max-width: 50%;
