--- a/src/frontend/components/profileHeader.module.css
+++ b/src/frontend/components/profileHeader.module.css
@@ -31,6 +31,17 @@
   margin-top: 20px;
 }
 
+.resumeButton {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 5px;
+}
+
+.resumeButton:hover {
+  background-color: #2d2d2d;
+}
+
 .userTypeTag {
   background-color: #8fb8d9;
   padding: 10px;
