--- a/src/frontend/components/profileHeader.module.css
+++ b/src/frontend/components/profileHeader.module.css
@@ -35,11 +35,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 5px;
 }
 
 .resumeButton:hover {
   background-color: #2d2d2d;
+}
+
+.resumeTag {
+  background-color: #2d2d2d;
+  padding: 10px;
+  border-radius: 8px;
+  font-size: 20px;
+  color: #1a1a1a;
+  text-align: center;
+  font-weight: bold;
 }
 
 .userTypeTag {
