--- a/src/frontend/components/profileHeader.module.css
+++ b/src/frontend/components/profileHeader.module.css
@@ -29,6 +29,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 20px;
+  margin-bottom: 0px;
 }
 
 .resumeButton {
@@ -37,18 +38,19 @@
   align-items: center;
 }
 
-.resumeButton:hover {
-  background-color: #2d2d2d;
-}
-
 .resumeTag {
-  background-color: #2d2d2d;
+  background-color: #8fb8d9;
   padding: 10px;
   border-radius: 8px;
   font-size: 20px;
+  width: 70px;
   color: #1a1a1a;
   text-align: center;
   font-weight: bold;
+}
+
+.resumeTag:hover {
+  background-color: #a5c7e0;
 }
 
 .userTypeTag {
@@ -56,6 +58,7 @@
   padding: 10px;
   border-radius: 8px;
   font-size: 20px;
+  width: 70px;
   color: #1a1a1a;
   text-align: center;
   font-weight: bold;
@@ -208,4 +211,37 @@
   .linksContainer {
     justify-content: flex-start;
   }
+}
+
+
+.profileContainer {
+  position: relative;
+}
+
+.pdfViewer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 9999;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.closeButton {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.pdfEmbed {
+  width: 80%;
+  height: 80%;
 }
