--- a/src/frontend/pages/StudentProfilePage/studentProfile.module.css
+++ b/src/frontend/pages/StudentProfilePage/studentProfile.module.css
@@ -137,7 +137,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 9999; /* Ensuring the modal has the highest z-index */
+    z-index: 9999;
   }
   
   .modalContent {
