slight changes to edit project component

--- a/src/frontend/components/ProjectEntryPage/layerDisplay.module.css
+++ b/src/frontend/components/ProjectEntryPage/layerDisplay.module.css
@@ -138,12 +138,12 @@
 
 .modalContent {
   position: relative;
-  background-color: white;
+  background-color: #2e2e2e;
   padding: 20px;
   border-radius: 8px;
-  max-width: 80%;
   max-height: 80%;
   overflow: auto;
+  width: 85%; 
 }
 
 .modalImage {
