--- a/src/frontend/pages/GoLivePage/GoLiveLandingPage.module.css
+++ b/src/frontend/pages/GoLivePage/GoLiveLandingPage.module.css
@@ -11,8 +11,8 @@ body, html {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
-  padding: 20px;
+  padding: 40px;
+  min-height: auto;
   box-sizing: border-box;
   backdrop-filter: blur(10px);
   background-color: rgba(45, 45, 45, 0.3) !important;
@@ -23,8 +23,8 @@ body, html {
 }
 
 .title {
-  font-size: 2.5rem;
-  margin-bottom: 2rem;
+  font-size: 2rem;
+  margin-bottom: 1rem;
   color: #E0E0E0;
   margin-top: 0px;
 }
@@ -32,8 +32,8 @@ body, html {
 .container {
   background-color: #2D2D2D;
   border-radius: 10px;
-  padding: 2rem;
-  margin-bottom: 2rem;
+  padding: 1.5rem;
+  margin-bottom: 1rem;
   width: 100%;
   max-width: 400px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
