--- a/src/frontend/components/AddBlocPortfolio.module.css
+++ b/src/frontend/components/AddBlocPortfolio.module.css
@@ -20,6 +20,26 @@
   box-sizing: border-box;
 }
 
+.addTagsAndLinks {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 40px;
+  border-top: 1px solid var(--border-color);
+  padding-top: 20px; 
+}
+.linkInput, .tagInput {
+  width: 98%;
+  padding: 0.75rem;
+  margin-bottom: .5rem;
+  background-color: var(--input-bg);
+  color: var(--primary-text);
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  font-size: 1rem;
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
 .subTitle{
   font-size: 1.5rem;
   margin-bottom: 1rem;
@@ -203,7 +223,7 @@
 .actionButtons {
   display: flex;
   justify-content: space-between;
-  margin-top: 2rem;
+  margin-top: 1rem;
   padding-top: 1rem;
   border-top: 1px solid var(--border-color);
 }
@@ -331,4 +351,5 @@
   .saveButton {
     width: 100%;
   }
+
 }
