--- a/src/frontend/components/ProjectEntryPage/projectEntry.module.css
+++ b/src/frontend/components/ProjectEntryPage/projectEntry.module.css
@@ -137,7 +137,7 @@
 
 }
 
-.projectLinkButton {
+.linkButton {
   background-color: #eae6e6;
   color: #70b9e3;
   text-decoration: none;
@@ -145,9 +145,12 @@
   border-radius: 5px;
   transition: background-color 0.3s ease;
   font-weight: bold;
+  display: inline-flex;
+  align-items: center;
+  gap: 4px; 
 }
 
-.projectLinkButton:hover {
+.linkButton:hover {
   background-color: #1e1e1e;
 }
 
