--- a/src/frontend/components/AddBlocPortfolio.module.css
+++ b/src/frontend/components/AddBlocPortfolio.module.css
@@ -381,6 +381,28 @@
   margin-top: 20px;
 }
 
+.deleteButton{
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1.2rem;
+  transition: background-color 0.3s ease, transform 0.1s ease;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--secondary-bg);
+  color: var(--primary-text);
+  border: 1px solid var(--highlight-bg);
+}
+
+.deleteButton:hover {
+  background-color: var(--highlight-bg);
+  color: var(--primary-bg);
+  transform: translateY(-2px);
+}
+
 .modalDeleteButton {
   background: red;
   color: white;
