--- a/src/frontend/pages/SignUpPage/SignUp.module.css
+++ b/src/frontend/pages/SignUpPage/SignUp.module.css
@@ -33,7 +33,8 @@
 }
 
 .signupForm {
-  width: 400px;
+  width: auto;
+  min-width: 400px;
   padding: 2rem;
   background-color: rgba(32, 52, 74, 0.8); 
   border-radius: 10px;
