--- a/src/frontend/pages/SignUpPage/SignUp.module.css
+++ b/src/frontend/pages/SignUpPage/SignUp.module.css
@@ -271,7 +271,19 @@
 }
 
 
-/* Add these styles to your SignUp.module.css */
+.loadingIndicator {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  z-index: 1000; /* Ensure the loading indicator appears on top */
+  font-size: 1.2em;
+}
+
 
 .modalOverlay {
   position: fixed;
