!!!! EDITING APP.CSS

--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,17 @@ body {
     transform: rotate(360deg);
   }
 }
+
+::-webkit-scrollbar {
+  height: 6px;
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: #2d2d2d;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #8fb8d9;
+  border-radius: 3px;
+}
